# dm-report

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt
src/dmcrawler/: __init__.py  client.py
src/dmreport/: __init__.py  cli.py  client.py
