[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DM-Report"
dynamic = ["version"]
authors = [
    { name="Serkan Girgin", email="girgink@gmail.com" },
]
description = "A package and command-line utility to collect data from Digital Matter trackers."
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "requests",
]
keywords = [
    "GPS Tracker",
    "Data Collection",
    "IoT",
]

[project.scripts]
dmreport = "dmreport.cli:main"

[project.urls]
Homepage = "https://github.com/ITC-CRIB/dm-report"
Issues = "https://github.com/ITC-CRIB/dm-report/issues"

[tool.hatch.version]
path = "src/dmreport/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dmreport"]